# wonderwordsmodule

./: .coverage  .gitignore  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PYPI.md  README.md  __init__.py  pyproject.toml  random_word.py  readme.md  requirements.txt  setup.py
.github/workflows/: python-package.yml
assets/: config.yml  main.yml
docs/: advanced.rst  conf.py  index.rst  install.rst  quickstart.rst  requirements.txt
docs/api_docs/: api.rst  cli.rst  index.rst  random_sentence.rst  random_word.rst
getword/: random_sentence.py  random_word.py
older_distributions/: wonderwords-1.0.6-py3-none-any.whl  wonderwords-1.1.6a1-py3-none-any.whl  wonderwords-1.1.6b1-py3-none-any.whl  wonderwords-1.1.6b2-py3-none-any.whl  wonderwords-1.1.7-py3-none-any.whl  wonderwords-1.1.8-py3-none-any.whl  wonderwords_mrmaxguns-0.0.1-py3-none-any.whl  wonderwords_mrmaxguns-0.1.0-py3-none-any.whl  wonderwords_mrmaxguns-0.1.1-py3-none-any.whl  wonderwords_mrmaxguns-0.1.2-py3-none-any.whl  wonderwords_mrmaxguns-0.1.3-py3-none-any.whl  wonderwords_mrmaxguns-1.0.0-py3-none-any.whl  wonderwords_mrmaxguns-1.0.1-py3-none-any.whl  wonderwords_mrmaxguns-1.0.2-py3-none-any.whl  wonderwords_mrmaxguns-1.0.3-py3-none-any.whl  wonderwords_mrmaxguns-1.0.4-py3-none-any.whl  wonderwords_mrmaxguns-1.0.5-py3-none-any.whl
tests/: test_random_sentence.py  test_random_word.py
wonderwords/: __init__.py  _trie.py  cmdline.py  cmdline_parser.py  random_sentence.py  random_word.py  test.py
wonderwords/assets/: adjectivelist.txt  nounlist.txt  profanitylist.txt
